// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Card component should have card classname 1`] = `
<div
  className="card"
>
  Card Content
</div>
`;

exports[`Card component should have card-content classname 1`] = `
<div
  className="card-content"
>
  Content
</div>
`;

exports[`Card component should have card-footer's classname 1`] = `
<div
  className="card"
>
  <div
    className="card-footer"
  >
    <div
      className="card-footer-item"
    >
      Yes
    </div>
    <div
      className="card-footer-item"
    >
      No
    </div>
  </div>
</div>
`;

exports[`Card component should have card-header's classname 1`] = `
<div
  className="card"
>
  <div
    className="card-header"
  >
    <div
      className="card-header-title"
    >
      Title
    </div>
    <div
      className="card-header-icon"
    >
      <i
        className="icon"
      />
    </div>
  </div>
</div>
`;

exports[`Card component should have card-image classname 1`] = `
<div
  className="card-image"
>
  <figure
    className="image is-4by3"
  >
    <img
      src="http://bulma.io/images/placeholders/1280x960.png"
    />
  </figure>
</div>
`;
